# paper-inbox-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: research_profile.example.yaml  runtime.example.yaml  sources.example.yaml
prompts/: critic_prompt.md  daily_report_prompt.md  fast_reader_prompt.md  triage_prompt.md
src/paper_inbox/: __init__.py  cli.py  db.py  logging_config.py  migrations.py  models.py  settings.py
src/paper_inbox/dashboard/: __init__.py  app.py
src/paper_inbox/llm/: __init__.py  base.py  deepseek_client.py  mock_client.py  openai_client.py
src/paper_inbox/pipeline/: __init__.py  collect.py  dedupe.py  enrich.py  fast_read.py  feedback.py  pdf_fetch.py  pdf_parse.py  report.py  run_daily.py  triage.py
src/paper_inbox/scoring/: __init__.py  feedback_signals.py  profile_match.py  score.py
src/paper_inbox/sources/: __init__.py  arxiv_source.py  base.py  hf_daily_source.py  semantic_scholar.py
src/paper_inbox/storage/: __init__.py  artifacts.py  paths.py
src/paper_inbox/utils/: dates.py  hashing.py  retry.py  text.py
tests/: conftest.py  test_arxiv_source.py  test_db.py  test_dedupe.py  test_deepseek_client.py  test_enrichment.py  test_feedback_signals.py  test_hf_daily.py  test_mock_llm.py  test_models.py  test_report.py  test_run_daily.py  test_scoring.py  test_semantic_scholar.py  test_triage_with_signals.py
tests/fixtures/: sample_arxiv_feed.xml  sample_hf_daily.json  sample_profile.yaml
